--- a/css/style_policy.css
+++ b/css/style_policy.css
@@ -1,3 +1,9 @@
+.container{
+  margin: 0;
+  min-width: 100vw;
+  padding: 0;
+}
+
 @media (min-width: 1000px) {
   body, html {
     height: 100%; /* Ensure full height */
@@ -12,6 +18,8 @@
     margin: 0 auto; /* Center the content horizontally */
     transform: scale(0.8); /* Adjust the scaling factor as needed */
     transform-origin: top center; /* Keep content anchored at the top */
+    min-width: 0;
+    padding: 0;
   }
 
   /* Add a class to elements with overflow-x to allow horizontal scrolling */
@@ -19,7 +27,6 @@
     overflow-x: auto;
   }
 }
-
 @font-face {
     font-family: "SilkScreen";
     src: url("../fonts/Silkscreen-Regular.ttf");
